fix ecc new dep name

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "pleonasm/merkle-tree": "~1.0.0",
     "composer/semver": "^1.4.0|^3.2.0",
     "lastguest/murmurhash": "^v2.0.0",
-    "shanecurran/ecc": "^0.0.1",
+    "shanecurran/phpecc": "^0.0.1",
     "protonlabs/buffertools": "^0.5.0",
     "bitwasp/bech32": "^0.0.1"
   },
