Fix branches names

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: "Unit tests"
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main, master, 1.0 ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main, master, 1.0 ]
 
 jobs:
   static-analysis-phpstan:
